[tool.poetry]
name = "webexmemebot"
version = "0.0.0"  # Version is tracked by GitHub Releases
description = "Webex-based meme generation bot using memegen.link."
authors = ["luketainton"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.2"
webex-bot = "^0.5.2"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
coverage = "^7.6.9"
isort = "^5.13.2"
pylint = "^3.3.3"
pylint-exit = "^1.2.0"
pytest = "^8.3.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
meme = "app.main:main"
