[project]
name = "webexmemebot"
version = "0.0.0"
description = "Webex-based meme generation bot using memegen.link."
readme = "README.md"
authors = [
    {name = "luketainton"},
]
requires-python = ">=3.11.2"
dependencies = [
    "webex-bot<1.0.0,>=0.5.2",
    "pillow<12.0.0,>=11.0.0",
    "astroid<=3.3.8",
]

[tool.uv]
dev-dependencies = [
    "black<25.2.0,>=25.1.0",
    "coverage<8.0.0,>=7.6.10",
    "isort<6.0.0,>=5.13.2",
    "pylint<4.0.0,>=3.3.2",
    "pylint-exit<2.0.0,>=1.2.0",
    "pytest<9.0.0,>=8.3.4",
    "pre-commit<5.0.0,>=4.0.1",
]

[project.scripts]
meme = "app.main:main"

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
